--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@ under the License.
   </parent>
 
   <artifactId>maven-project-info-reports-plugin</artifactId>
-  <version>3.4.2</version>
+  <version>3.4.2.0</version>
   <packaging>maven-plugin</packaging>
 
   <name>Apache Maven Project Info Reports Plugin</name>
@@ -556,6 +556,22 @@ under the License.
   </reporting>
 
   <profiles>
+    <profile>
+      <id>aliyun</id>
+      <distributionManagement>
+        <repository>
+          <id>rdc-releases</id>
+          <url>https://packages.aliyun.com/maven/repository/2082403-release-RrOTMm/</url>
+        </repository>
+        <snapshotRepository>
+          <id>rdc-snapshots</id>
+          <url>https://packages.aliyun.com/maven/repository/2082403-snapshot-cI3zbl/</url>
+        </snapshotRepository>
+      </distributionManagement>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+    </profile>
     <profile>
       <id>reporting</id>
       <reporting>
